# Spatial-Temporal-Air-Quality-Zone-Industrial-Curtailment-Planning

./: LICENSE  README.md
spatial-tempo-air-quality-zoning/: LICENSE  Makefile  README.md  pyproject.toml
spatial-tempo-air-quality-zoning/docs/: mkdocs.yml
spatial-tempo-air-quality-zoning/docs/docs/: index.md
spatial-tempo-air-quality-zoning/notebooks/: job_fetch_data.ipynb
spatial-tempo-air-quality-zoning/spatial_tempo_air_quality_zoning/: __init__.py  dataset.py  features.py  plots.py
spatial-tempo-air-quality-zoning/spatial_tempo_air_quality_zoning/modeling/: predict.py  train.py
