[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "spatial_tempo_air_quality_zoning"
version = "0.0.1"
description = "Prevents sudden factory shutdowns by adjusting production based on weather forecasts, protecting industrial jobs while hitting PM2.5 targets."
authors = [
  { name = "Ntandoyenkosi Matshisela" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]
requires-python = "~=3.10.0"


[tool.ruff]
line-length = 99
src = ["spatial_tempo_air_quality_zoning"]
include = ["pyproject.toml", "spatial_tempo_air_quality_zoning/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["spatial_tempo_air_quality_zoning"]
force-sort-within-sections = true

